[gd_scene load_steps=5 format=3 uid="uid://tgobscv1eu61"]

[ext_resource type="Script" uid="uid://bkn7lxbd7wblk" path="res://scenes/score_keeper.gd" id="1_xi53c"]
[ext_resource type="FontFile" uid="uid://dngxwutr0yk4e" path="res://assets/fonts/PixelOperator8.ttf" id="2_efoji"]
[ext_resource type="Texture2D" uid="uid://cmjjg84ajogrt" path="res://assets/sprites/waffle-character.png" id="2_xi53c"]
[ext_resource type="FontFile" uid="uid://dploqk3avhkrg" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3_xi53c"]

[node name="ScoreKeeper" type="CanvasLayer"]
script = ExtResource("1_xi53c")
metadata/_edit_horizontal_guides_ = [71.0, 67.0]

[node name="MainCharacter" type="Sprite2D" parent="."]
position = Vector2(52, 61)
scale = Vector2(3, 3)
texture = ExtResource("2_xi53c")
offset = Vector2(-1, 0)
region_enabled = true
region_rect = Rect2(40, 73, 14, 15)

[node name="MainCharacterLabel" type="Label" parent="."]
offset_left = 67.0
offset_top = 43.0
offset_right = 111.0
offset_bottom = 75.0
theme_override_fonts/font = ExtResource("2_efoji")
theme_override_font_sizes/font_size = 32
text = "0"

[node name="PickerCharacter" type="Sprite2D" parent="."]
position = Vector2(167, 61)
scale = Vector2(3, 3)
texture = ExtResource("2_xi53c")
offset = Vector2(-1, 0)
region_enabled = true
region_rect = Rect2(42, 42, 12, 15)

[node name="PickerCharacterLabel" type="Label" parent="."]
offset_left = 181.0
offset_top = 44.0
offset_right = 214.0
offset_bottom = 76.0
theme_override_fonts/font = ExtResource("2_efoji")
theme_override_font_sizes/font_size = 32
text = "0"

[node name="BoothCharacter" type="Sprite2D" parent="."]
position = Vector2(288, 57)
scale = Vector2(3, 3)
texture = ExtResource("2_xi53c")
offset = Vector2(-1, 0)
region_enabled = true
region_rect = Rect2(71, 73, 13, 13)

[node name="BoothCharacterLabel" type="Label" parent="."]
offset_left = 302.0
offset_top = 43.0
offset_right = 339.0
offset_bottom = 75.0
theme_override_fonts/font = ExtResource("3_xi53c")
theme_override_font_sizes/font_size = 32
text = "0"

[node name="WaffleCharacter" type="Sprite2D" parent="."]
visible = false
position = Vector2(175, 57)
scale = Vector2(3, 3)
texture = ExtResource("2_xi53c")
region_enabled = true
region_rect = Rect2(42, 11, 12, 10)

[node name="WaffleCharacterLabel" type="Label" parent="."]
visible = false
offset_left = 188.0
offset_top = 42.0
offset_right = 225.0
offset_bottom = 74.0
theme_override_fonts/font = ExtResource("2_efoji")
theme_override_font_sizes/font_size = 32
text = "0"
